--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,3 +12,25 @@ h1 {
   color: white;
   text-align: center;
 }
+
+.links {
+  color: aquamarine;
+  font-size: 16px;
+}
+
+h2 {
+  font-family: verdana;
+  font-size: 42px;
+  font-weight: 300;
+}
+
+h3 {
+  font-style: verdana;
+  font-size: 21px;
+  color: grey;
+}
+
+.bottomHeader {
+  text-align: right;
+  color: grey;
+}
