--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,7 @@
-.center
-{
-     margin: 0 auto;
-     width: 100px;
+html {
+  background-color: black;
+  text-align: center;
 }
-
 
 h1 {
   font-family: Verdana;
@@ -16,21 +14,28 @@ h1 {
 .links {
   color: aquamarine;
   font-size: 16px;
+  font-family: verdana;
+  text-align: center;
 }
 
 h2 {
   font-family: verdana;
   font-size: 42px;
   font-weight: 300;
+  color: white;
+  text-align: center;
 }
 
 h3 {
-  font-style: verdana;
+  font-family: verdana;
   font-size: 21px;
   color: grey;
+  text-align: center;
+  color: white;
 }
 
 .bottomHeader {
   text-align: right;
   color: grey;
+  font-family: verdana;
 }
